Carsties/infra/K8s/bid-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bid-svc
spec:
  selector:
    matchLabels:
      app: bid-svc
  template:
    metadata:
      labels:
        app: bid-svc
    spec:
      containers:
        - name: bid-svc
          image: nishant198509/bid-svc
          imagePullPolicy: Never #To use local images and not pull them down from repository
          ports:
            - containerPort: 80
---
# Create a ClusterIP for the auction service pod to make it available internally to other services
apiVersion: v1
kind: Service
metadata:
  name: bid-clusterip
spec:
  type: ClusterIP
  selector:
    app: bid-svc
  ports:
    - port: 80
      targetPort: 80
