Carsties/infra/K8s/webapp-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-svc
spec:
  selector:
    matchLabels:
      app: webapp-svc
  template:
    metadata:
      labels:
        app: webapp-svc
    spec:
      containers:
        - name: webapp-svc
          image: nishant198509/web-app
          imagePullPolicy: Never #To use local images and not pull them down from repository
          ports:
            - containerPort: 3000
---
# Create a ClusterIP for the auction service pod to make it available internally to other services
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip
spec:
  type: ClusterIP
  selector:
    app: webapp-svc
  ports:
    - port: 3000
      targetPort: 3000
